--- a/junit-assignment/build.gradle
+++ b/junit-assignment/build.gradle
@@ -12,9 +12,9 @@ repositories {
 }
 
 ext.junit4Version        = '4.12'
-ext.junitVintageVersion  = '4.12.2'
+//ext.junitVintageVersion  = '4.12.2'
 ext.junitPlatformVersion = '1.0.2'
-ext.junitJupiterVersion  = '5.0.2'
+ext.junitJupiterVersion  = '5.4.2'
 ext.log4jVersion         = '2.9.0'
 
 apply plugin: 'java'
@@ -57,9 +57,13 @@ dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
 
+    // JUnit Jupiter API for parameterizedTests
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.2.0'
+
     // If you also want to support JUnit 3 and JUnit 4 tests
     testCompile("junit:junit:${junit4Version}")
-    testRuntime("org.junit.vintage:junit-vintage-engine:${junitVintageVersion}")
+//    testRuntime("org.junit.vintage:junit-vintage-engine:${junitVintageVersion}")
+
 
     // To avoid compiler warnings about @API annotations in JUnit code
     testCompileOnly('org.apiguardian:apiguardian-api:1.0.0')
@@ -72,7 +76,7 @@ dependencies {
     testRuntime("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}")
 }
 
-task wrapper(type: Wrapper) {
-    description = 'Generates gradlew[.bat] scripts'
-    gradleVersion = '4.3.1'
-}
+//task wrapper(type: Wrapper) {
+//    description = 'Generates gradlew[.bat] scripts'
+//    gradleVersion = '4.3.1'
+//}
